objects/EntitlementSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessHourId__c</fullName>
        <label>Business Hour Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordTypes__c</fullName>
        <label>Case Record Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EntitlementProcessName__c</fullName>
        <label>Entitlement Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Entitlement Setting</label>
    <pluralLabel>Entitlement Settings</pluralLabel>
</CustomObject>